# depth_skeleton_extractor

MHADdata/: BerkeleyMHAD_download.sh
MHADdata/BerkeleyMHAD/Calibration/: RwTw_k02.txt  camcfg_k02.yml
MHADdata/BerkeleyMHAD/Kinect/Correspondences/: corr_moc_kin02_s01_t-pose.txt
MHADdata/BerkeleyMHAD/Kinect/Kin02/S01/T-pose/: kin_k02_s01_t-pose_color_00000.ppm  kin_k02_s01_t-pose_color_00001.ppm  kin_k02_s01_t-pose_color_00002.ppm  kin_k02_s01_t-pose_color_00003.ppm  kin_k02_s01_t-pose_color_00004.ppm  kin_k02_s01_t-pose_color_00005.ppm  kin_k02_s01_t-pose_color_00006.ppm  kin_k02_s01_t-pose_color_00007.ppm  kin_k02_s01_t-pose_color_00008.ppm  kin_k02_s01_t-pose_color_00009.ppm  kin_k02_s01_t-pose_color_00010.ppm  kin_k02_s01_t-pose_color_00012.ppm  kin_k02_s01_t-pose_color_00013.ppm  kin_k02_s01_t-pose_color_00014.ppm  kin_k02_s01_t-pose_color_00015.ppm  kin_k02_s01_t-pose_color_00016.ppm  kin_k02_s01_t-pose_color_00017.ppm  kin_k02_s01_t-pose_color_00018.ppm  (+273 more)
MHADdata/BerkeleyMHAD/Kinect/Time_stamps/: time_stamps_kin02_s01_t-pose.txt
MHADdata/BerkeleyMHAD/Mocap/SkeletalData/: centered.bvh
MHADdata/BerkeleyMHAD/Mocap/Time_stamps/: time_stamps_moc_s01_t-pose.txt
MHADdata/demos/: NDLUTIL_readme.txt
MHADdata/demos/demo_depth/: BerkeleyMHAD_download  demo_depth.m
MHADdata/demos/demo_image/: demo_image.m
MHADdata/gt_factory/: CMakeLists.txt  CMakeLists.txt~
MHADdata/gt_factory/include/: bvh_read.h  bvh_read.h~
MHADdata/gt_factory/src/: bvh_read.cpp  bvh_read.cpp~  bvh_skeleton.cpp  bvh_skeleton.cpp~  util.cpp  util.cpp~
(+6 files in other folders)
